fixed codesmell